scripts/k8s/annotation/3_not_contains_any_v1/1_policy1.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "demo1"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
  - name: userdata
    expression: '{"must1": "value1*", "must2": "value2*"}'
  - name: dataset1a
    expression: 'has(object.metadata.annotations) ? object.metadata.annotations : []'
  - name: dataset1b
    expression: 'has(object.spec.template.metadata.annotations) ? object.spec.template.metadata.annotations : []'
  - name: dataset3
    expression: 'has(object.spec.jobTemplate.metadata.annotations) ? object.spec.jobTemplate.metadata.annotations: []'
  - name: isType1
    expression: 'object.kind in ["Pod"] ? true: false'
  - name: isType2
    expression: 'object.kind in ["Deployment","ReplicaSet","DaemonSet","StatefulSet","Job"] ? true: false'
  - name: isType3
    expression: 'object.kind in ["CronJob"] ? true: false'
  validations:
    - expression: '
        !variables.isType1 ||
        (
          variables.dataset1a.exists(key, key in variables.userdata && variables.dataset1a[key].matches(variables.userdata[key]))
        )
        '
      message: '❌ operator: pod not_contains_any, annotations does not use any predefined key/value'
    - expression: '
        !variables.isType2 ||
        (
          (variables.dataset1a.exists(key, key in variables.userdata && variables.dataset1a[key].matches(variables.userdata[key]))) 
          ||
          (variables.dataset1b.exists(key, key in variables.userdata && variables.dataset1b[key].matches(variables.userdata[key])))
        )
        '
      message: '❌ operator: deployment not_contains_any, annotations does not use any predefined key/value'
    - expression: '
        !variables.isType3 ||
        (
          (variables.dataset1a.exists(key, key in variables.userdata && variables.dataset1a[key].matches(variables.userdata[key]))) 
          ||
          (variables.dataset3.exists(key, key in variables.userdata && variables.dataset3[key].matches(variables.userdata[key])))
        )
        '
      message: '❌ operator: cron_job not_contains_any, annotations does not use any predefined key/value'
